# kandidly

./: .gitignore  README.md  pyproject.toml
.claude/: candidate-voice-interview.md
.claude/skills/verify/: SKILL.md  workos_e2e.mjs
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  codeql.yml  deploy.yml  ops.yml
agent/: Dockerfile  backend_client.py  config.py  control.py  datamsg.py  pyproject.toml  session.py  timekeeper.py  worker.py
agent/tests/: conftest.py  test_control.py  test_datamsg.py  test_timekeeper.py  test_worker_prompt.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  candidate.py  console.py  internal.py  public.py
backend/app/core/: cache.py  captcha.py  config.py  deps.py  email.py  errors.py  ids.py  queue.py  ratelimit.py  security.py  storage.py  workos_client.py
backend/app/db/: base.py  models.py  seed.py  seed_fixtures.py  seed_prod.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0000_users.py  0001_initial.py  0002_views.py  0003_orgs_and_console_fields.py  0004_add_end_date.py  0005_allow_zero_weight.py  0006_add_submission_enrichment.py  0007_add_resume_markdown.py  0008_add_integrity_review.py  0009_add_requisition_deleted_at.py  0010_requisition_invites.py  0011_console_allowlist.py
backend/app/domain/: access.py  applications.py  audit.py  builder.py  enrichment.py  evidence.py  forms.py  harness.py  integrity.py  interview_context.py  interviews.py  invites.py  links.py  plan.py  plan_build.py  plans.py  proctoring.py  provisioning.py  rubrics.py  scoring.py  states.py
backend/app/domain/fallback_plans/: swe_backend.json
backend/app/emails/: base.html  base.txt
backend/app/emails/candidate_invite/: body.html  body.txt  subject.txt
backend/app/emails/console_invite/: body.html  body.txt  subject.txt
backend/app/emails/interview_completed/: body.html  body.txt  subject.txt
backend/app/emails/org_invite/: body.html  body.txt  subject.txt
backend/app/jobs/: annotate.py  email.py  enrichment.py  interviews.py  planning.py  proctor_vision.py  recording.py  resume.py  sweepers.py  worker.py
backend/app/llm/: clients.py  prompts.py  schemas.py
backend/app/llm/prompts/: annotate_v1.md  enrich_v1.md  extract_v1.md  integrity_v1.md  interviewer_v1.md  plan_v1.md  proctor_vision_v1.md  report_v1.md  score_v1.md
backend/app/schemas/: api.py  interview_config.py
backend/scripts/: auth_debug.py  dump_scoring.py  livekit_test.py  reset_scoring.py
backend/tests/: test_console_screening_answers.py  test_dev_users_gate.py  test_email.py  test_forms.py  test_invites.py  test_plan_limits.py  test_plans.py  test_proctoring.py  test_recording.py  test_requisition_end_date.py  test_scoring.py  test_scoring_pipeline.py  test_security_jwt.py  test_states.py
backend/tests/api/: conftest.py  test_captcha_guards.py  test_console_allowlist.py  test_console_requisitions.py  test_email_endpoint.py  test_form_submission.py  test_health.py  test_interview_delete.py  test_interview_lifecycle.py  test_invitations.py  test_invite_flow.py  test_invite_only.py  test_plan_limits_api.py  test_sweepers.py  test_workos_auth.py
docs/: ARTIFACTS.md  SPEC.md  STATUS.md  deploy-ec2.md  plan_for_features.md
docs/design/: DESIGN.md  dashboard.html  index.html  requisition-new.html  requisitions.html
infra/: .env.example  .env.prod.example  Caddyfile.prod  Makefile  VERSIONS.md  compose.prod.yml  compose.yml  deploy.sh
web/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ui.tsx  voice.tsx
web/src/lib/: api.ts  audioViz.ts  auth.ts  consoleApi.ts  devicePrefs.ts  interviewChannel.ts  recaptcha.ts  types.ts  useInterviewRecorder.ts  useProctorSnapshots.ts
web/src/pages/: AuthCallback.tsx  Marketing.tsx  NotFound.tsx
web/src/pages/admin/: ApplicationDetail.tsx  Dashboard.tsx  Forms.tsx  RequisitionDetail.tsx  RequisitionsList.tsx  Rubrics.tsx
web/src/pages/candidate/: Done.tsx  Form.tsx  Interview.tsx  Landing.tsx  Lobby.tsx
web/src/pages/console/: Access.tsx  AccountModal.tsx  ConsoleLayout.tsx  Dashboard.tsx  InterviewReview.tsx  Interviews.tsx  Invitations.tsx  InvitePanel.tsx  RequisitionBuilder.tsx  Requisitions.tsx  filters.tsx  interviewData.ts  requisitionData.ts
