[project]
name = "kandidly-agent"
version = "0.1.0"
description = "Kandidly LiveKit Agents worker — the realtime interview brain (SPEC §9)"
requires-python = ">=3.12"
dependencies = [
    # [VERIFY-DOC] exact package + plugin names/versions against LiveKit docs.
    "livekit-agents>=0.11",
    "livekit-plugins-deepgram",
    "livekit-plugins-cartesia",
    "livekit-plugins-anthropic",
    "livekit-plugins-silero",
    "livekit-api",
    "httpx>=0.28",
    "structlog>=24.4",
    "pydantic>=2.9",
    "redis>=5.2",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
