[project]
name = "kandidly-backend"
version = "0.1.0"
description = "Kandidly backend — FastAPI APIs, state machines, jobs (SPEC §3.1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pydantic-ai>=0.0.14",            # [VERIFY-DOC] structured output + TestModel
    "arq>=0.26,<1.0",                 # [VERIFY-DOC]
    "httpx>=0.28,<1.0",
    "aioboto3>=13.0",
    "jsonschema>=4.23,<5.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.10",
    "jinja2>=3.1",
    "uuid7>=0.1.0",                   # uuid7() generator; app-layer UUIDv7 (SPEC D16)
    "redis>=5.2",
    # Resume pipeline (SPEC §8.6.2) — [VERIFY-DOC]
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pytesseract>=0.3.13",
    "pillow>=11.0",
    "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
# Identity check job (SPEC §10.5) — heavy CPU deps, opt-in.
identity = ["insightface>=0.7.3", "onnxruntime>=1.20", "numpy>=2.0"]

# PEP 735 dependency groups — `uv sync` installs the dev group by default.
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
